# tools

./: .gitignore  AGENTS.md  LICENSE  README.md  SECURITY.md  ruff.toml
.github/: CODEOWNERS  dependabot.yml  zizmor.yml
.github/workflows/: ai-guard.yml  ci.yml  codeql.yml  release-rclone-migrate.yml  security.yml
backup-verification/: .gitignore  README.md  pyproject.toml  test_verify_backup.py  verify.py  verify_backup.py  verify_config.json.example
cc-session/: README.md  cc-session
cc-session/docs/: bastion-deployment.md  threat-model.md
cc-session/install/: launchd-macos.plist.template  launchd-mbp.plist.template  setup-bridge-key.sh  setup-vps.sh  systemd-vps.service.template
cc-session/tests/: test_cc_session.bats
cc-session/tests/fixtures/: fake-claude
rclone-migrate/: .gitignore  README.md  config.example.toml  pyproject.toml
rclone-migrate/docs/: mhl-integration.md  profiles.md  walkthrough-insta360-x5.md
rclone-migrate/rclone_migrate/: audit.py  cache.py  cli.py  config.py  hashing.py  manifest.py  mhl.py  ops.py  profiles.py  progress.py  query.py  rclone.py  state.py  verbose.py  wizard.py
rclone-migrate/rclone_migrate/profiles/: balanced.toml  cloud-native.toml  dit.toml  forensic.toml
rclone-migrate/scripts/: install.sh  uninstall.sh
rclone-migrate/tests/: test_audit.py  test_cache.py  test_cache_dataset_id.py  test_clean_partial.py  test_cli.py  test_config.py  test_copyto_rc.py  test_e2e.py  test_failfast.py  test_hashing.py  test_mhl.py  test_partial_watch.py  test_profiles.py  test_progress.py  test_query.py  test_remote_refresh.py  test_rsync_engine.py  test_state.py  test_verbose.py  test_wizard.py  test_xxhash_core_dep.py
