[tool.poetry]
name = "verify-backup"
version = "1.0.0"
description = "SD card to NAS backup verification tool with EXIF-aware checksum comparison"
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"

[tool.poetry.scripts]
verify = "verify:main"
verify-backup = "verify_backup:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["."]
python_files = ["test_*.py"]
