[tool.poetry]
name = "verify-backup"
version = "1.0.0"
description = "SD card to NAS backup verification tool with EXIF-aware checksum comparison"
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0"
pytest-cov = "^5.0"

[tool.poetry.scripts]
verify = "verify:main"
verify-backup = "verify_backup:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["."]
python_files = ["test_*.py"]

[tool.coverage.run]
branch = true
source = ["verify_backup"]

[tool.coverage.report]
show_missing = true
skip_covered = true
# Threshold reflects current coverage of the core module under unit test.
# The `verify` runner script is integration-tested manually and intentionally
# excluded from `source` above. Ratchet this number up as tests grow.
fail_under = 30
exclude_also = [
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "pragma: no cover",
]
