[project]
name = "rclone-migrate"
version = "0.1.0"
description = "Safe rclone migration with copy → check → delete and persisted checksums"
requires-python = ">=3.9"
dependencies = [
    "tomli; python_version < '3.11'",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
rmig = "rclone_migrate.cli:main"
rmig-hash = "rclone_migrate.cli:hash_cmd"
rmig-copy = "rclone_migrate.cli:copy_cmd"
rmig-check = "rclone_migrate.cli:check_cmd"
rmig-delete = "rclone_migrate.cli:delete_cmd"
rmig-log = "rclone_migrate.cli:log_cmd"
rmig-file-status = "rclone_migrate.cli:file_status_cmd"
rmig-init = "rclone_migrate.cli:init_cmd"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["rclone_migrate*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
