[project]
name = "rclone-migrate"
version = "0.8.1"
description = "Safe rclone migration with copy → check → delete and persisted checksums"
requires-python = ">=3.9"
dependencies = [
    "tomli; python_version < '3.11'",
    # parse_chain reads `ascmhl_chain.xml`, which may be written by
    # third-party MHL tools — defuse against XML attacks (entity
    # expansion, external entity resolution).
    "defusedxml>=0.7",
    # CORE, not optional: the default `dit` profile (and the whole
    # camera-original DIT workflow) negotiates xxh3. Without this package
    # xxh3/xxh128/xxh64 silently degrade to a per-file `rclone hashsum`
    # subprocess — far slower and with no intra-file progress. Making it
    # optional caused exactly that in the field. A small pure-wheel dep.
    "xxhash>=3.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov>=5.0"]
# Redundant now that xxhash is a core dependency; kept as a no-op so any
# existing `rclone-migrate[xxhash]` install spec keeps working.
xxhash = ["xxhash>=3.0"]

[project.scripts]
rmig = "rclone_migrate.cli:main"
rmig-hash = "rclone_migrate.cli:hash_cmd"
rmig-copy = "rclone_migrate.cli:copy_cmd"
rmig-check = "rclone_migrate.cli:check_cmd"
rmig-delete = "rclone_migrate.cli:delete_cmd"
rmig-log = "rclone_migrate.cli:log_cmd"
rmig-file-status = "rclone_migrate.cli:file_status_cmd"
rmig-init = "rclone_migrate.cli:init_cmd"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["rclone_migrate*"]

[tool.setuptools.package-data]
rclone_migrate = ["profiles/*.toml"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.coverage.run]
branch = true
source = ["rclone_migrate"]

[tool.coverage.report]
show_missing = true
skip_covered = true
# Threshold sits just below current line+branch coverage so a regression of
# more than ~2pp fails CI. Raise as the test suite grows.
fail_under = 68
exclude_also = [
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "pragma: no cover",
]
